@@ -24,22 +24,21 @@ damietta_byzantine_coup = {
 
 damietta_byzantine_crusade = {
 
-	prerequisites = {
-		religion = catholic
-		FROM = {
-			tag = BYZ
-			religion = orthodox
-		}
-	}
+	#prerequisites = {
+	#	religion = catholic
+	#	FROM = {
+	#		tag = BYZ
+	#		religion = orthodox
+	#	}
+	#}
 
-	allowed_provinces = {
-		region = balkan_region
-	}
+	#allowed_provinces = {
+	#	region = balkan_region
+	#}
 	
 	war_goal = damietta_byzantine_crusade_goal
 
 	attacker_disabled_po = {
-		po_change_religion
 		po_become_vassal
 		po_demand_provinces
 	}
