@@ -12,8 +12,8 @@ base_manpower = 1
 #native_ferocity = 5
 #native_hostileness = 5
 add_core = BSM
-controller = BSM
 owner = BSM
+controller = BSM
 is_city = yes
 
 discovered_by = muslim
