@@ -29,7 +29,7 @@
  damietta_byzantine_crusade:0 "Byzantine Crusade"
  damietta_byzantine_crusade_desc:0 "Smite the Greek heretics!"
 
- DAMIETTA_BYZANTINE_CRUSADE_NAME:0 "$ORDER$$FIRST$ Byzantine Crusade"
+ DAMIETTA_BYZANTINE_CRUSADE_NAME:0 "Byzantine Crusade"
 
  damietta_establish_latin_states:0 "Establish Latin States"
  damietta_establish_latin_states_desc:0 "Latin States are established in Byzantine territory."
