@@ -3,6 +3,7 @@ v0.1:
 + Added Byzantine Co-Emperor event
 + Added Thessalonica (FES)
 + Added start screen text for Damietta
++ Added events for a Catholic Crusade against an expansionist Byzantium
 
 * Cleaned up the Foreign Quarter event for Crusader States
 * Added Serbian to Prilep's accepted cultures to reflect that Prilep was born out of the Serbian Empire
